# Cauchy

./: README.md  build.py  pyproject.toml
cauchy/: __init__.py  cauchy.py
cauchy_c/: assembly_tools.pxd  interface.c  interface.pyx
cauchy_c/c-algorithms/: assembly_tools.c  assembly_tools.h  gauss_legendre.c  gauss_legendre.h
data/20230926_104544_HCMBXW_001-BI000027_BEM_900_120_50_5/: BEM_results_rep_1_MSP_Neumann_data.csv  BEM_results_rep_1_mesh.csv
data/fair_dipole/25A/20241004_135258_1606_D06_1606_D06/: Parameters.txt
data/fair_dipole/25A/20241004_135258_1606_D06_1606_D06/20241004_135258_1606_D06_Current_25_A/: BEM_results_rep_1_B_fields.csv  BEM_results_rep_1_Bx.csv  BEM_results_rep_1_By.csv  BEM_results_rep_1_MSP_Dirichlet_data.csv  BEM_results_rep_1_MSP_Neumann_data.csv  BEM_results_rep_1_X.csv  BEM_results_rep_1_Y.csv  BEM_results_rep_1_mesh.csv  BEM_results_rep_1_std_Bx.csv  BEM_results_rep_1_std_By.csv  Measuring_current_cycle_000.txt  Readme.txt  measurements_scan_XCO.csv  measurements_scan_YCO.csv  results_scan_XCO.csv  results_scan_YCO.csv  scan_results.csv
data/fair_dipole/25A/20241004_135258_1606_D06_1606_D06/20241004_135258_1606_D06_Current_25_A/raw_data/: idx_0001_scan_XCO_rawFlux  idx_0002_scan_XCO_rawFlux  idx_0003_scan_XCO_rawFlux  idx_0004_scan_XCO_rawFlux  idx_0005_scan_XCO_rawFlux  idx_0006_scan_XCO_rawFlux  idx_0007_scan_XCO_rawFlux  idx_0008_scan_XCO_rawFlux  idx_0009_scan_XCO_rawFlux  idx_0010_scan_XCO_rawFlux  (+320 more)
docs/source/: conf.py  index.rst
examples/: README.rst  plot_example_1.py  plot_example_2.py  plot_example_3.py
